tests/baselines/reference/u-invalid-class-escape.errors.txt
u-invalid-class-escape.ts(22,2): error TS1510: '\c' must be followed by an ASCII letter.
u-invalid-class-escape.ts(22,6): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== u-invalid-class-escape.ts (2 errors) ====
    // Copyright (C) 2016 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    /*---
    esid: sec-patterns
    es6id: 21.2.1
    description: >
        ClassEscape does not recognize "class control" patterns
    info: |
        ClassEscape[U] ::
            b
            [+U] -
            CharacterClassEscape
            CharacterEscape[?U]
    
        The `u` flag precludes the Annex B extension that enables this pattern.
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /\c0/u;
     ~~
!!! error TS1510: '\c' must be followed by an ASCII letter.
         ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    